--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
               <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
               <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills & Projects</a></li>
+              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
               <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
               <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#more">Explore More</a></li>
           </ul>
@@ -69,9 +69,10 @@
             <a href="mailto:name@email.com">gaddesr@mail.uc.edu</a>
           </div>
           <p class="lead mb-5">
-            Excited to learn new things and skilled in areas like web
-            development and data analytics, with experience in Google Cloud,
-            seeking opportunities to grow and contribute in the tech industry.
+            As a seasoned Software Engineer with a passion for crafting cutting-edge solutions, I bring a wealth of technical
+            expertise and a proven track record of developing robust software applications. With a strong foundation in
+            computer science and hands-on experience in the complete software development lifecycle, I am dedicated to
+            driving innovation and delivering high-quality results.
           </p>
           <div class="social-icons">
             <a
@@ -155,11 +156,11 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Designed and developed technical solutions on the Appian BPM Suite based on Client’s requirements.
+                    Designed and developed technical solutions using Mulesoft based on Client’s requirements.
                 </li>
                 <li>
                     <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Configured Dynamic Interfaces, Automation of Workflow Process design, Performance improvement, Application integration, and application lifecycle using Appian low code tools.
+                    Configured Dynamic Interfaces, Automation of Workflow Process design, Performance improvement, Api integration, and application lifecycle using MuleSoft tools.
                 </li>
                 <li>
                     <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -174,16 +175,10 @@
         <div class="resume-section-content">
           <h2 class="mb-5">Interests</h2>
           <p>
-            Apart from being a Data Analyst, I enjoy most of my time being
-            outdoors. In the winter, I am an avid skier and novice ice climber.
-            During the warmer months here in Cincinnati, I enjoy mountain
-            biking, free climbing, and kayaking.
+            Apart from working as a MuleSoft developer, I love spending time outdoors. In summer, you'll often find me playing cricket and volleyball. As the weather warms up in Cincinnati, I enjoy mountain biking and indulging in free climbing adventures.
           </p>
           <p class="mb-0">
-            When forced indoors, I follow a number of sci-fi and fantasy genre
-            movies and television shows, I am an aspiring chef, and I spend a
-            large amount of my free time exploring the latest technology
-            advancements in the front-end web development world.
+           When indoors, I indulge in reading books,cooking new dishes, exploring new technologies, and honing my culinary skills while staying updated with the latest trends in IT .
           </p>
         </div>
       </section>
